src/record/snapshots/asupersync__record__task__tests__task_record_transition_sequence.snap
---
source: src/record/task.rs
assertion_line: 2134
expression: scrubbed_sequence
---
[
  [
    "created",
    {
      "cancel_epoch": 0,
      "created_at": 0,
      "deadline": null,
      "heap_index": null,
      "id": {
        "generation": 1,
        "index": 9,
        "kind": "TaskId"
      },
      "is_local": false,
      "last_polled_step": 0,
      "next_in_queue": null,
      "owner": {
        "generation": 1,
        "index": 11,
        "kind": "RegionId"
      },
      "pinned_worker": null,
      "polls_remaining": 25,
      "prev_in_queue": null,
      "queue_tag": 0,
      "sched_generation": 0,
      "sched_priority": 0,
      "total_polls": 0
    }
  ],
  [
    "running",
    {
      "cancel_epoch": 0,
      "created_at": 0,
      "deadline": null,
      "heap_index": null,
      "id": {
        "generation": 1,
        "index": 9,
        "kind": "TaskId"
      },
      "is_local": false,
      "last_polled_step": 0,
      "next_in_queue": null,
      "owner": {
        "generation": 1,
        "index": 11,
        "kind": "RegionId"
      },
      "pinned_worker": null,
      "polls_remaining": 25,
      "prev_in_queue": null,
      "queue_tag": 0,
      "sched_generation": 0,
      "sched_priority": 0,
      "total_polls": 0
    }
  ],
  [
    "cancel_requested",
    {
      "cancel_epoch": 1,
      "created_at": 0,
      "deadline": null,
      "heap_index": null,
      "id": {
        "generation": 1,
        "index": 9,
        "kind": "TaskId"
      },
      "is_local": false,
      "last_polled_step": 0,
      "next_in_queue": null,
      "owner": {
        "generation": 1,
        "index": 11,
        "kind": "RegionId"
      },
      "pinned_worker": null,
      "polls_remaining": 25,
      "prev_in_queue": null,
      "queue_tag": 0,
      "sched_generation": 0,
      "sched_priority": 0,
      "total_polls": 0
    }
  ],
  [
    "cancelling",
    {
      "cancel_epoch": 1,
      "created_at": 0,
      "deadline": null,
      "heap_index": null,
      "id": {
        "generation": 1,
        "index": 9,
        "kind": "TaskId"
      },
      "is_local": false,
      "last_polled_step": 0,
      "next_in_queue": null,
      "owner": {
        "generation": 1,
        "index": 11,
        "kind": "RegionId"
      },
      "pinned_worker": null,
      "polls_remaining": 50,
      "prev_in_queue": null,
      "queue_tag": 0,
      "sched_generation": 0,
      "sched_priority": 0,
      "total_polls": 0
    }
  ],
  [
    "finalizing",
    {
      "cancel_epoch": 1,
      "created_at": 0,
      "deadline": null,
      "heap_index": null,
      "id": {
        "generation": 1,
        "index": 9,
        "kind": "TaskId"
      },
      "is_local": false,
      "last_polled_step": 0,
      "next_in_queue": null,
      "owner": {
        "generation": 1,
        "index": 11,
        "kind": "RegionId"
      },
      "pinned_worker": null,
      "polls_remaining": 50,
      "prev_in_queue": null,
      "queue_tag": 0,
      "sched_generation": 0,
      "sched_priority": 0,
      "total_polls": 0
    }
  ],
  [
    "completed",
    {
      "cancel_epoch": 1,
      "created_at": 0,
      "deadline": null,
      "heap_index": null,
      "id": {
        "generation": 1,
        "index": 9,
        "kind": "TaskId"
      },
      "is_local": false,
      "last_polled_step": 0,
      "next_in_queue": null,
      "owner": {
        "generation": 1,
        "index": 11,
        "kind": "RegionId"
      },
      "pinned_worker": null,
      "polls_remaining": 50,
      "prev_in_queue": null,
      "queue_tag": 0,
      "sched_generation": 0,
      "sched_priority": 0,
      "total_polls": 0
    }
  ]
]
